Fixing header spacing issue

--- a/style/base.css
+++ b/style/base.css
@@ -6,4 +6,5 @@
 
 .onyx-Widget {
   overflow: auto;
+  contain: strict;
 }
